Add Kafka UI service and integrate Kafka message processing in the application. Remove deprecated KafkaConsumerService and add Elasticsearch connection handling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,18 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     restart: always
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "7070:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local-kafka
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:29092
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+    depends_on:
+      - kafka
+      
   mysql:
     image: mysql:latest
     ports:
