--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^9.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
     "typeorm": "^0.3.22"
