--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
@@ -22,9 +23,13 @@
     "@elastic/elasticsearch": "^9.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
+    "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
+    "neo4j-driver": "^5.28.1",
+    "redis": "^4.7.0",
     "typeorm": "^0.3.22"
   }
 }
