feat: Integrate MongoDB and enhance product and cart management  - Added MongoDB connection and repository for product management. - Implemented ProductMongoService to handle product operations in MongoDB. - Updated CartRedisService to sync cart data with MongoDB. - Introduced new command handlers for fetching products and cart details. - Enhanced existing controllers and routes to support new functionalities. - Updated configuration to include MongoDB and CDC topics for data capture. - Added pagination support for product retrieval. - Removed unused Elasticsearch service code. - Updated package.json to include mongoose-paginate-v2 for pagination.

--- a/.env
+++ b/.env
@@ -36,5 +36,24 @@ SECURITY_JWT_REFRESH_SECRET=ROSyJWWHgSejTAEIemaSrLT59Evc2M9AUtp4O4sVHGpIFS9rLGGE
 SECURITY_JWT_ACCESS_EXPIRATION=86400
 SECURITY_JWT_REFRESH_EXPIRATION=86400
 
+# MongoDB
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
+MONGODB_DATABASE=shoppee
+
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# Neo4j
+NEO4J_HOST=localhost
+NEO4J_PORT=7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=Nam123456
+
+# CDC (Change Data Capture)
+CDC_PRODUCT_TOPIC=mckay.shoppee.products
+CDC_CART_TOPIC=mckay.shoppee.carts
+
 # Debezium
 # DEBEZIUM_GROUP_ID=mysql-connector
