--- a/.env
+++ b/.env
@@ -59,6 +59,8 @@ CASSANDRA_PORT=9042
 CDC_PRODUCT_TOPIC=mckay.shoppee.products
 CDC_CART_TOPIC=mckay.shoppee.carts
 CDC_REVIEW_TOPIC=mckay.shoppee.reviews
+CDC_ORDER_TOPIC=mckay.shoppee.orders
+CDC_ORDER_ITEM_TOPIC=mckay.shoppee.order_items
 
 # Debezium
 # DEBEZIUM_GROUP_ID=mysql-connector
