--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
     depends_on:
       - kafka
-      
+
   mysql:
     image: mysql:latest
     ports:
@@ -71,7 +71,14 @@ services:
       - STATUS_STORAGE_TOPIC=my_connect_statuses
       - KEY_CONVERTER_SCHEMAS_ENABLE=false
       - VALUE_CONVERTER_SCHEMAS_ENABLE=false
+
+      - CONNECT_METRICS_REPORTERS= # clear any custom reporters
+      - CONNECT_JMX_ENABLED=false # disable JMX reporter
     restart: always
+    volumes:
+      - ./connect/plugins:/kafka/connect/plugins
+      - ./connect/config/connect-distributed.properties:/etc/kafka/connect/connect-distributed.properties
+      - ./connect/init-connector.sh:/docker-entrypoint-initdb.d/init-connector.sh
 
   mongodb:
     image: mongo:6.0
@@ -114,3 +121,4 @@ volumes:
   neo4j_data:
   neo4j_logs:
   cassandra_data:
+  connect-plugins:
