--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
   }
 }
