--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "migrate-up": "npx typeorm-ts-node-commonjs migration:run -d src/infrastructure/database/mysql/connection.ts"
+    "migrate-up": "ts-node src/infrastructure/database/mysql/migration/mock-data.ts"
   },
   "keywords": [],
   "author": "",
