--- a/.env
+++ b/.env
@@ -46,8 +46,7 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 
 # Neo4j
-NEO4J_HOST=localhost
-NEO4J_PORT=7687
+NEO4J_HOST=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=Nam123456
 
